@@ -36,9 +36,9 @@ Size=294,475
 Collapsed=0
 
 [Window][Texture Editor]
-ViewportPos=192,111
+ViewportPos=41,69
 ViewportId=0x7361E594
-Size=1429,978
+Size=2023,944
 Collapsed=0
 
 [Window][Texture Creation]
